k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mapreduce
  labels:
    app.kubernetes.io/name: kubemapreduce
    app.kubernetes.io/part-of: kubemapreduce
