k8s/59-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: mapreduce
spec:
  controllerName: networking.gke.io/gateway
