k8s/api-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-external
  namespace: mapreduce
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: api
  ports:
    - name: http
      port: 80
      targetPort: 8081
