k8s/keycloak-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-external
  namespace: mapreduce
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
