k8s/minio-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-external
  namespace: mapreduce
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
